--- a/CTF-HackTheBox/Easy/MetaTwo/6. I analyze the hash.md
+++ b/CTF-HackTheBox/Easy/MetaTwo/6. I analyze the hash.md
@@ -1,9 +1,10 @@
-1) Analizzo l'hash con un tool hash-identifier:
-
+1) I analyze the hash with a hash-identifier tool:
+```
 --------------------------------------------------
  HASH: $P$BGrGrgf2wToBS79i07Rk9sN4Fzk.TV.
-
-Possible Hashs:
+```
+2) Possible Hash:
+```
 [+] MD5(Wordpress)
 --------------------------------------------------
  HASH: $P$B4aNM28N0E.tMy/JIcnVMZbGcU16Q70
@@ -11,13 +12,14 @@ Possible Hashs:
 Possible Hashs:
 [+] MD5(Wordpress)
 --------------------------------------------------
+```
 
-
-2) Mi salvo la password di manager dentro un file con nano
-3) Faccio un attacco al dizionario con john the ripper:
+2) I save the manager password in a file with nano
+3)I attack the dictionary with john the ripper:
+```
 john hash.txt --wordlist=/usr/share/wordlists/rockyou.txt  
 
 partylikearockstar		(manager)
-
-4) Con queste credenziali posso entrare nel pannello manager del sito:
+```
+4) With these credentials I can access the site manager panel:
 http://metapress.htb/login
