--- a/CTF-HackTheBox/Easy/MetaTwo/8. FTP Service.md
+++ b/CTF-HackTheBox/Easy/MetaTwo/8. FTP Service.md
@@ -1,23 +1,26 @@
-1) Accediamo al server FTP con le credenziali trovate precedentemente
-2) Vediamo che di sta nella directory principale:
+1) We access the FTP server with the credentials found previously
+2) We see that it is in the root directory:
+```
 ftp> ls
 229 Entering Extended Passive Mode (|||11785|)
 150 Opening ASCII mode data connection for file list
 drwxr-xr-x   5 metapress.htb metapress.htb     4096 Oct  5 14:12 blog
 drwxr-xr-x   3 metapress.htb metapress.htb     4096 Oct  5 14:12 mailer
+```
 
-
-3) Entriamo nella directory mailer: cd mailer
-4) Vediamo che ci sta dentro questa directory:
+3) We enter the mailer directory: cd mailer
+4) Let's see what's in this directory:
+```
 ftp> ls
 200 PORT command successful
 150 Opening ASCII mode data connection for file list
 drwxr-xr-x   4 metapress.htb metapress.htb     4096 Oct  5 14:12 PHPMailer
 -rw-r--r--   1 metapress.htb metapress.htb     1126 Jun 22 18:32 send_email.php
-
-5) Trasferiamo il file send_email.php in locale: get  send_email.php
-6) Apriamo il file in locale: cat  send_email.php
+```
+5) We transfer the send_email.php file locally: get  send_email.php
+6) Let's open the file locally: cat  send_email.php
 OUTPUT:
+```php
 <?php
 
  * This script will be used to send an email to all our users when ready fo
@@ -58,9 +61,9 @@ try {
 } catch (Exception $e) {
     echo "Mailer Error: " . $mail->ErrorInfo;
 }
-
-7) Abbiamo scoperto le credenziali per entrare nel server con il servizio SSH: 
+```
+7) We discovered the credentials to enter the server with the SSH service: 
    jnelson:Cb4_JmWM8zUZWMu@Ys
 
-8) Entrando con le credenziali nella directory leggiamo il file user.txt:
+8) Entering the directory with the credentials, we read the user.txt fileEntering the directory with the credentials, we read the user.txt file:
 f5e5b0acb3245c921789a2bd5b3e6418
