Update 5. Privilegie Escalation (Vertical).md

--- a/CTF-HackTheBox/Medium/Ambassador/5. Privilegie Escalation (Vertical).md
+++ b/CTF-HackTheBox/Medium/Ambassador/5. Privilegie Escalation (Vertical).md
@@ -84,7 +84,7 @@ tcp6       0      0 :::3000                 :::*                    LISTEN      
 
 
 4) Then I discover with Google that the consult default port is 8500
-5) After I transfert the ssh developer connectrion in my local machine:
+5) After I transfert the ssh developer connection in my local machine:
 ```
 ┌──(kali㉿kali)-[~]
 └─$ ssh -L 8000:127.0.0.1:8500  developer@10.10.11.183 -fN
