--- a/CTF-TryHackMe/1. Easy/LazyAdmin/2. Directory Enumeration.md
+++ b/CTF-TryHackMe/1. Easy/LazyAdmin/2. Directory Enumeration.md
@@ -1,3 +1,5 @@
-tramite un directory enumeration abbiamo scoperto che ci stanno due directory:
-- /content
-- /server-status
+1) Via ffuf I have discover that there are two directory:
+```
+ /content
+ /server-status
+```
