--- a/CTF-TryHackMe/1. Easy/LazyAdmin/3. Information  Disclosure.md
+++ b/CTF-TryHackMe/1. Easy/LazyAdmin/3. Information  Disclosure.md
@@ -1,8 +1,9 @@
-1) Nella directory content ho scoperto che il sito viene gestito da un CMS chiamato SweetRice
-2) Ora cerco un exploit sul sito https://www.exploit-db.com
-3) Scopro questo exploit https://www.exploit-db.com/exploits/40718
-4) Leggendo l'exploit scopro questa directory : http://10.10.162.4/content/inc/mysql_backup/
-5) In questa directory scarico un file:
+1) In the content directory I have discover that the site is manage to a CMS that It call SweetRice
+2) Now I search a exploit on " https://www.exploit-db.com"
+3) I discover this exploit " https://www.exploit-db.com/exploits/40718"
+4) I read the exploit and I discover an Information Disclosure in this directory: http://10.10.162.4/content/inc/mysql_backup/
+5) In this directory I download the file:
+```php
 <?php return array (
   0 => 'DROP TABLE IF EXISTS `%--%_attachment`;',
   1 => 'CREATE TABLE `%--%_attachment` (
@@ -102,6 +103,10 @@
   `allow_comment` tinyint(1) NOT NULL DEFAULT \'1\',
   `template` varchar(60) NOT NULL,
   PRIMARY KEY (`id`),
-
-6) In questo file trovo questa stringa: 42f749ade7f9e195bf475f37a44cafcb 
-7) tramite il sito crackstation cerco di codificarlo:  Password123
+```
+6) In this file I find a string: 42f749ade7f9e195bf475f37a44cafcb 
+7) Via the CrackStation site I decode the hash: Password123
+```
+- Username: manager
+- Password: Password123
+```
