--- a/CTF-TryHackMe/1. Easy/Startup/3. FTP.md
+++ b/CTF-TryHackMe/1. Easy/Startup/3. FTP.md
@@ -1,4 +1,6 @@
-1) Ora mi connetto con le credenziali Anonymous:Anonymous al servizio ftp:                            ┌──(kali㉿kali)-[~]
+1) Now I connect with the credentials Anonymous:Anonymous to the ftp service:                         
+```
+┌──(kali㉿kali)-[~]
 └─$ ftp 10.10.86.224 
 Connected to 10.10.86.224.
 220 (vsFTPd 3.0.3)
@@ -19,8 +21,10 @@ drwxrwxrwx    2 65534    65534        4096 Nov 12  2020 ftp
 -rw-r--r--    1 0        0             208 Nov 12  2020 notice.txt
 226 Directory send OK.
 ftp> 
+```
 
-3)  Ora ci portiamo il file .test.log nella nostra macchina: 
+3)  Now we bring the .test.log file to our machine:
+```
 ftp> get .test.log
 local: .test.log remote: .test.log
 229 Entering Extended Passive Mode (|||8280|)
@@ -29,12 +33,10 @@ local: .test.log remote: .test.log
 226 Transfer complete.
 5 bytes received in 00:00 (0.09 KiB/s)
 ftp> 
+```
 
-4) Apriamo il file:
-   test
-
-5) Ora ci portiamo il file important.jpg sulla nostra macchina: 
-
+4) Now we bring the important.jpg file to our machine:
+```
 ftp> get important.jpg
 local: important.jpg remote: important.jpg
 229 Entering Extended Passive Mode (|||56577|)
@@ -43,9 +45,10 @@ local: important.jpg remote: important.jpg
 226 Transfer complete.
 251631 bytes received in 00:00 (273.34 KiB/s)
 ftp> 
+```
 
-6) Estraiamo i metadati dal file:  exiftool important.jpg
-
+5) We extract the metadata from the file: 
+```
 ┌──(kali㉿kali)-[~]
 └─$ exiftool important.jpg
 ExifTool Version Number         : 12.44
@@ -69,8 +72,10 @@ Interlace                       : Noninterlaced
 Significant Bits                : 8 8 8 8
 Image Size                      : 735x458
 Megapixels                      : 0.337
+```
 
-7) Estraiamo altri metadati: strings important.jpg  
+6) Let's extract other metadata:
+```
 ┌──(kali㉿kali)-[~]
 └─$ strings important.jpg       
 IHDR
@@ -2780,3 +2785,4 @@ jl$&
 aF5>
 WCLvD
 IEND
+```
