--- a/CTF-TryHackMe/1. Easy/Startup/5. User flag.md
+++ b/CTF-TryHackMe/1. Easy/Startup/5. User flag.md
@@ -1,19 +1,27 @@
-1) Aggiusta la reverse shell:    python -c 'import pty; pty.spawn("/bin/bash") '
+1) Fix the reverse shell:
+```
+python -c 'import pty; pty.spawn("/bin/bash") '
+```
 
-2) Trovo nella directory una cartella chiamata "incidents":
+2) I find in the directory a folder called "incidents":
+```
 www-data@startup:/$ ls
 ls
 bin   home            lib         mnt         root  srv  vagrant
 boot  incidents       lib64       opt         run   sys  var
 dev   initrd.img      lost+found  proc        sbin  tmp  vmlinuz
 etc   initrd.img.old  media       recipe.txt  snap  usr  vmlinuz.old
+```
 
-3) ci entro e trovo un file:
+3) I go there and find a file:
+```
 www-data@startup:/incidents$ ls
 ls
 suspicious.pcapng
+```
 
-4) Apro il file: cat suspicious.pcapng
+4) I open the file: cat suspicious.pcapng
+```
 www-data@startup:/incidents$ cat suspicious.pcapng
 cat suspicious.pcapng
 
@@ -518,16 +526,20 @@ Content-Type: text/html; charset=UTF-8
 ls
 suspicious.pcapng
 www-data@startup:/incidents$ 
+```
 
-6) trovo una stringa interessante: c4ntg3t3n0ughsp1c3   <---- Password Account lennie
-7) Ora se facciamo il comando:  su lennie
-8) Ora vado nella directory /home/lennie : cd /home/lennie
-9) Apro il file  user.txt : cat  user.txt
+6) I find an interesting string: c4ntg3t3n0ughsp1c3 <---- Account Password lennie
+7) Now if we do the command: on lennie
+8) Now I go to the /home/lennie directory : cd /home/lennie
+9) I open the user.txt file : cat user.txt
+```
 THM{03ce3d619b80ccbfb3b7fc81e46c0e79}
+```
 
-
-11) Poi vado nella directory principale e apro il file recipe.txt: 
+11) Then I go to the root directory and open the recipe.txt file:
+```
 cat recipe.txt
 Someone asked what our main ingredient to our spice soup is today. I figured I can't keep it a secret forever and told him it was love.
+```
 
-8) love risponde alla nostra prima domanda
+8) `love` answers our first question
