--- a/CTF-TryHackMe/1. Easy/ColddBox Easy/6. Privilege Escalation (Vertical).md
+++ b/CTF-TryHackMe/1. Easy/ColddBox Easy/6. Privilege Escalation (Vertical).md
@@ -47,7 +47,7 @@ wqFGZWxpY2lkYWRlcywgbcOhcXVpbmEgY29tcGxldGFkYSE=
 ```
 
 ---------
-## Patch the machines vulnerabilities
+## Patch the machine vulnerabilities
 
 1) I change all the permess that they generate the privilege escalation:
 ```
