--- a/CTF-TryHackMe/1. Easy/GLITCH/7. Privilege Escalation (Vertical).md
+++ b/CTF-TryHackMe/1. Easy/GLITCH/7. Privilege Escalation (Vertical).md
@@ -34,7 +34,7 @@ root@ubuntu:/var/web#
 ```
 
 ---
-## Patch the machines vulnerabilities
+## Patch the machine vulnerabilities
 
 1) I change all the permess that they generate the privilege escalation:
 ```
