--- a/CTF-TryHackMe/1. Easy/Gotta Catch'em All!/6. Privilege Escalation (Vertical).md
+++ b/CTF-TryHackMe/1. Easy/Gotta Catch'em All!/6. Privilege Escalation (Vertical).md
@@ -65,7 +65,7 @@ Pikachu!
 ```
 
 -------
-## Patch the machines vulnerabilities to maintain your access
+## Patch the machine vulnerabilities to maintain your access
 
 1) I must change the permissions:
 ```
