--- a/CTF-TryHackMe/1. Easy/JPGChat/3. Privilege Escalation (Vertical).md
+++ b/CTF-TryHackMe/1. Easy/JPGChat/3. Privilege Escalation (Vertical).md
@@ -120,7 +120,7 @@ https://github.com/optionalCTF
 root@ubuntu-xenial:/dev/shm# 
 ```
 ---
-## Patch the machines vulnerabilities
+## Patch the machine vulnerabilities
 
 1) I remove the file test_module.py:
 ```
