--- a/CTF-TryHackMe/2. Medium/Tokyo Ghoul/6. Privilege Escalation (Vertical).md
+++ b/CTF-TryHackMe/2. Medium/Tokyo Ghoul/6. Privilege Escalation (Vertical).md
@@ -54,7 +54,7 @@ root@vagrant:~# cat /root/root.txt
 ```
 
 ---
-## Patch the machines vulnerabilities
+## Patch the machine vulnerabilities
 
 1) I remove the file that generate the privilege escalation:
 ```
