--- a/CTF-TryHackMe/2. Medium/UltraTech/4. Privilege Escalation (Vertical).md
+++ b/CTF-TryHackMe/2. Medium/UltraTech/4. Privilege Escalation (Vertical).md
@@ -52,7 +52,7 @@ By himself.
 
 3) What are the first 9 characters of the root user's private SSH key? MIIEogIBA
 ------
-## Patch the machines vulnerabilities
+## Patch the machine vulnerabilities
 
 1) I change the group of user r00t:
 ```
