--- a/CTF-HackTheBox/1. Easy/Inject/3. Web App && Command Injection.md
+++ b/CTF-HackTheBox/1. Easy/Inject/3. Web App && Command Injection.md
@@ -132,7 +132,7 @@ Note: Unnecessary use of -X or --request, POST is already inferred.
 {"timestamp":"2023-03-24T19:20:53.546+00:00","status":500,"error":"Internal Server Error","message":"EL1001E: Type conversion problem, cannot convert from java.lang.ProcessImpl to java.lang.String","path":"/functionRouter"} 
 ```
 
-5) I crate a reverse shell:
+5) I create a reverse shell:
 ```
 ┌──(kali㉿kali)-[~]
 └─$ nano reverseshell.sh
